7 version completed the output

--- a/logs.html
+++ b/logs.html
@@ -201,178 +201,170 @@
 </font><font color=LightGray>
 }
 
-</font><font color=red>Errors: SIZE_MORE_THAN_CAPACITY</font>
-<font color=red>Errors: STACK_HASH_CHANGED</font>
-<font color=MediumBlue>stack[0x606000000020]
-</font><font color=BlueViolet>"stk"from main.cpp(18) int main(int, const char**)
-</font><font color=DarkMagenta>called from stack.cpp(337) ssize_t verify_stack(stack*)
-</font>{
-	left_canary = <font color=Green>14605741</font>(reference_value =<font color=Green>14605741)</font>
-	size = <font color=Orange>1000
-</font>	capacity = <font color=Crimson>8
-</font>	data<font color=DarkViolet>[0x606000000088]
-</font>	right_canary = <font color=Green>14605293</font>(reference_value =<font color=Green>14605293)</font>
-	{
-		 [left_canary] = <font color=Green>14605805</font>(reference_value =<font color=Green>14605805)</font><font color=DarkViolet>[0x606000000080]
-</font>		*[0] = 1<font color=DarkViolet>[0x606000000088]
-</font>		*[1] = 2<font color=DarkViolet>[0x60600000008c]
-</font>		*[2] = 3<font color=DarkViolet>[0x606000000090]
-</font>		*[3] = 4<font color=DarkViolet>[0x606000000094]
-</font>		*[4] = 5<font color=DarkViolet>[0x606000000098]
-</font>		 [5] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x60600000009c]
-</font>		 [6] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a0]
-</font>		 [7] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a4]
-</font>		 [right_canary] = <font color=Green>14605229</font>(reference_value =<font color=Green>14605229)</font><font color=DarkViolet>[0x6060000000b0]
-</font>	}
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>	[3] = 4
+</font><font color=LightGray>	[4] = 5
+</font><font color=LightGray>
 }
 
-<font color=red>Errors: SIZE_MORE_THAN_CAPACITY</font>
-<font color=red>Errors: STACK_HASH_CHANGED</font>
-<font color=MediumBlue>stack[0x606000000020]
-</font><font color=BlueViolet>"stk"from main.cpp(18) int main(int, const char**)
-</font><font color=DarkMagenta>called from stack.cpp(337) ssize_t verify_stack(stack*)
-</font>{
-	left_canary = <font color=Green>14605741</font>(reference_value =<font color=Green>14605741)</font>
-	size = <font color=Orange>1000
-</font>	capacity = <font color=Crimson>8
-</font>	data<font color=DarkViolet>[0x606000000088]
-</font>	right_canary = <font color=Green>14605293</font>(reference_value =<font color=Green>14605293)</font>
-	{
-		 [left_canary] = <font color=Green>14605805</font>(reference_value =<font color=Green>14605805)</font><font color=DarkViolet>[0x606000000080]
-</font>		*[0] = 1<font color=DarkViolet>[0x606000000088]
-</font>		*[1] = 2<font color=DarkViolet>[0x60600000008c]
-</font>		*[2] = 3<font color=DarkViolet>[0x606000000090]
-</font>		*[3] = 4<font color=DarkViolet>[0x606000000094]
-</font>		*[4] = 5<font color=DarkViolet>[0x606000000098]
-</font>		 [5] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x60600000009c]
-</font>		 [6] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a0]
-</font>		 [7] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a4]
-</font>		 [right_canary] = <font color=Green>14605229</font>(reference_value =<font color=Green>14605229)</font><font color=DarkViolet>[0x6060000000b0]
-</font>	}
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>	[3] = 4
+</font><font color=LightGray>
 }
 
-<font color=red>Errors: SIZE_MORE_THAN_CAPACITY</font>
-<font color=red>Errors: STACK_HASH_CHANGED</font>
-<font color=MediumBlue>stack[0x606000000020]
-</font><font color=BlueViolet>"stk"from main.cpp(18) int main(int, const char**)
-</font><font color=DarkMagenta>called from stack.cpp(337) ssize_t verify_stack(stack*)
-</font>{
-	left_canary = <font color=Green>14605741</font>(reference_value =<font color=Green>14605741)</font>
-	size = <font color=Orange>1000
-</font>	capacity = <font color=Crimson>8
-</font>	data<font color=DarkViolet>[0x606000000088]
-</font>	right_canary = <font color=Green>14605293</font>(reference_value =<font color=Green>14605293)</font>
-	{
-		 [left_canary] = <font color=Green>14605805</font>(reference_value =<font color=Green>14605805)</font><font color=DarkViolet>[0x606000000080]
-</font>		*[0] = 1<font color=DarkViolet>[0x606000000088]
-</font>		*[1] = 2<font color=DarkViolet>[0x60600000008c]
-</font>		*[2] = 3<font color=DarkViolet>[0x606000000090]
-</font>		*[3] = 4<font color=DarkViolet>[0x606000000094]
-</font>		*[4] = 5<font color=DarkViolet>[0x606000000098]
-</font>		 [5] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x60600000009c]
-</font>		 [6] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a0]
-</font>		 [7] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a4]
-</font>		 [right_canary] = <font color=Green>14605229</font>(reference_value =<font color=Green>14605229)</font><font color=DarkViolet>[0x6060000000b0]
-</font>	}
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>	[3] = 4
+</font><font color=LightGray>
 }
 
-<font color=red>Errors: SIZE_MORE_THAN_CAPACITY</font>
-<font color=red>Errors: STACK_HASH_CHANGED</font>
-<font color=MediumBlue>stack[0x606000000020]
-</font><font color=BlueViolet>"stk"from main.cpp(18) int main(int, const char**)
-</font><font color=DarkMagenta>called from stack.cpp(337) ssize_t verify_stack(stack*)
-</font>{
-	left_canary = <font color=Green>14605741</font>(reference_value =<font color=Green>14605741)</font>
-	size = <font color=Orange>1000
-</font>	capacity = <font color=Crimson>8
-</font>	data<font color=DarkViolet>[0x606000000088]
-</font>	right_canary = <font color=Green>14605293</font>(reference_value =<font color=Green>14605293)</font>
-	{
-		 [left_canary] = <font color=Green>14605805</font>(reference_value =<font color=Green>14605805)</font><font color=DarkViolet>[0x606000000080]
-</font>		*[0] = 1<font color=DarkViolet>[0x606000000088]
-</font>		*[1] = 2<font color=DarkViolet>[0x60600000008c]
-</font>		*[2] = 3<font color=DarkViolet>[0x606000000090]
-</font>		*[3] = 4<font color=DarkViolet>[0x606000000094]
-</font>		*[4] = 5<font color=DarkViolet>[0x606000000098]
-</font>		 [5] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x60600000009c]
-</font>		 [6] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a0]
-</font>		 [7] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a4]
-</font>		 [right_canary] = <font color=Green>14605229</font>(reference_value =<font color=Green>14605229)</font><font color=DarkViolet>[0x6060000000b0]
-</font>	}
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>	[3] = 4
+</font><font color=LightGray>
 }
 
-<font color=red>Errors: SIZE_MORE_THAN_CAPACITY</font>
-<font color=red>Errors: STACK_HASH_CHANGED</font>
-<font color=MediumBlue>stack[0x606000000020]
-</font><font color=BlueViolet>"stk"from main.cpp(18) int main(int, const char**)
-</font><font color=DarkMagenta>called from stack.cpp(337) ssize_t verify_stack(stack*)
-</font>{
-	left_canary = <font color=Green>14605741</font>(reference_value =<font color=Green>14605741)</font>
-	size = <font color=Orange>1000
-</font>	capacity = <font color=Crimson>8
-</font>	data<font color=DarkViolet>[0x606000000088]
-</font>	right_canary = <font color=Green>14605293</font>(reference_value =<font color=Green>14605293)</font>
-	{
-		 [left_canary] = <font color=Green>14605805</font>(reference_value =<font color=Green>14605805)</font><font color=DarkViolet>[0x606000000080]
-</font>		*[0] = 1<font color=DarkViolet>[0x606000000088]
-</font>		*[1] = 2<font color=DarkViolet>[0x60600000008c]
-</font>		*[2] = 3<font color=DarkViolet>[0x606000000090]
-</font>		*[3] = 4<font color=DarkViolet>[0x606000000094]
-</font>		*[4] = 5<font color=DarkViolet>[0x606000000098]
-</font>		 [5] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x60600000009c]
-</font>		 [6] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a0]
-</font>		 [7] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a4]
-</font>		 [right_canary] = <font color=Green>14605229</font>(reference_value =<font color=Green>14605229)</font><font color=DarkViolet>[0x6060000000b0]
-</font>	}
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>	[3] = 4
+</font><font color=LightGray>
 }
 
-<font color=red>Errors: SIZE_MORE_THAN_CAPACITY</font>
-<font color=red>Errors: STACK_HASH_CHANGED</font>
-<font color=MediumBlue>stack[0x606000000020]
-</font><font color=BlueViolet>"stk"from main.cpp(18) int main(int, const char**)
-</font><font color=DarkMagenta>called from stack.cpp(337) ssize_t verify_stack(stack*)
-</font>{
-	left_canary = <font color=Green>14605741</font>(reference_value =<font color=Green>14605741)</font>
-	size = <font color=Orange>1000
-</font>	capacity = <font color=Crimson>8
-</font>	data<font color=DarkViolet>[0x606000000088]
-</font>	right_canary = <font color=Green>14605293</font>(reference_value =<font color=Green>14605293)</font>
-	{
-		 [left_canary] = <font color=Green>14605805</font>(reference_value =<font color=Green>14605805)</font><font color=DarkViolet>[0x606000000080]
-</font>		*[0] = 1<font color=DarkViolet>[0x606000000088]
-</font>		*[1] = 2<font color=DarkViolet>[0x60600000008c]
-</font>		*[2] = 3<font color=DarkViolet>[0x606000000090]
-</font>		*[3] = 4<font color=DarkViolet>[0x606000000094]
-</font>		*[4] = 5<font color=DarkViolet>[0x606000000098]
-</font>		 [5] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x60600000009c]
-</font>		 [6] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a0]
-</font>		 [7] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a4]
-</font>		 [right_canary] = <font color=Green>14605229</font>(reference_value =<font color=Green>14605229)</font><font color=DarkViolet>[0x6060000000b0]
-</font>	}
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>
 }
 
-<font color=red>Errors: SIZE_MORE_THAN_CAPACITY</font>
-<font color=red>Errors: STACK_HASH_CHANGED</font>
-<font color=MediumBlue>stack[0x606000000020]
-</font><font color=BlueViolet>"stk"from main.cpp(18) int main(int, const char**)
-</font><font color=DarkMagenta>called from stack.cpp(337) ssize_t verify_stack(stack*)
-</font>{
-	left_canary = <font color=Green>14605741</font>(reference_value =<font color=Green>14605741)</font>
-	size = <font color=Orange>1000
-</font>	capacity = <font color=Crimson>8
-</font>	data<font color=DarkViolet>[0x606000000088]
-</font>	right_canary = <font color=Green>14605293</font>(reference_value =<font color=Green>14605293)</font>
-	{
-		 [left_canary] = <font color=Green>14605805</font>(reference_value =<font color=Green>14605805)</font><font color=DarkViolet>[0x606000000080]
-</font>		*[0] = 1<font color=DarkViolet>[0x606000000088]
-</font>		*[1] = 2<font color=DarkViolet>[0x60600000008c]
-</font>		*[2] = 3<font color=DarkViolet>[0x606000000090]
-</font>		*[3] = 4<font color=DarkViolet>[0x606000000094]
-</font>		*[4] = 5<font color=DarkViolet>[0x606000000098]
-</font>		 [5] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x60600000009c]
-</font>		 [6] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a0]
-</font>		 [7] = 192<font color=Maroon>(POISON)</font><font color=DarkViolet>[0x6060000000a4]
-</font>		 [right_canary] = <font color=Green>14605229</font>(reference_value =<font color=Green>14605229)</font><font color=DarkViolet>[0x6060000000b0]
-</font>	}
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>
 }
 
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>	[2] = 3
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>	[1] = 2
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>	[0] = 1
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>
+}
+
+</font><font color=LightGray>stk
+{
+</font><font color=LightGray>
+}
+
+</font>
